--- a/mathemathics/tutorials-14.12.2023.html
+++ b/mathemathics/tutorials-14.12.2023.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moonlit Library - 眠お嬢の眠館</title>
-  <link rel="stylesheet" type="text/css" href="./styles/moonlit.css">
+  <link rel="stylesheet" type="text/css" href="../styles/moonlit.css">
   <title>Katex</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
@@ -19,26 +19,31 @@
   </header>
 
   <nav>
-    <a href="./index.html">Grand Foyer</a>
+    <a href="../index.html">Grand Foyer</a>
     <a href="#">Tea Salon</a>
     <a href="#">Elegant Garden</a>
-    <a href="./moonlit-library.html">Moonlit Library</a>
+    <a href="../moonlit-library.html">Moonlit Library</a>
   </nav>
   <section>
-    <h2>Explore the Calculus Corner</h2>
-    <p>Welcome to the Calculus Corner of the Moonlit Library. Here, amidst the whispers of ancient texts and the soft glow of candlelight, delve into the profound realm of calculus. Unravel the mysteries of derivatives, integrals, and infinite series as you embark on a mathematical journey.</p>
-    <h2>Fundamental Theorem of Calculus</h2>
+    <h2>Overview of the 14.12.2023 teachings</h2>
     <p>
-      If f is continuous over the interval [a,b] and F(x) is any antiderivative of f(x), then
-        \[ \int_{a}^{b} f(x) \, dx = F(b) - F(a) \]
-      </p>
-      <p><a href="https://math.libretexts.org/Courses/Monroe_Community_College/MTH_210_Calculus_I_(Professor_Dean)/Chapter_5%3A_Integration/5.3%3A__The_Fundamental_Theorem_of_Calculus_Basics">Source</a></p>
+        \[
+        \begin{aligned}
+        \int_{}^{}\frac{dx}{\sqrt{a^{2}-x^{2}}}=\frac{1}{a}\arcsin\frac{x}{a}
+        \end{aligned}
+        \]
+    </p>
+    <p>
+        \[
+        \begin{aligned}
+        \int_{}^{}\frac{dx}{\sqrt{x^{2}\pm a}}=\ln(x+\sqrt{x^{2}\pm a})+C
+        \end{aligned}
+        \]
+    </p>
     <div class="calculus-resources">
-      <h3>Calculus Resources</h3>
+      <h3>Resources</h3>
       <ul>
-        <li><a href="#" download>Introduction to Calculus.pdf</a><div class="dlbtn">Download</div></li>
-        <li><a href="#" download>Calculus I Workbook.docx</a><div class="dlbtn">Download</div></li>
-        <li><a href="#" download>Mastering Integrals Guide.txt</a><div class="dlbtn">Download</div></li>
+        <li><a href="../media/whiteboards/math/math tutorials groups 3-4 14.12.2023.pdf" download>Lecture whiteboard</a><div class="dlbtn">Download</div></li>
       </ul>
     </div>
   </section>
